fixing date time input and Menu hero height on mobile attempt 1

--- a/src/Code/globals.css
+++ b/src/Code/globals.css
@@ -73,7 +73,7 @@ h1{
     url("/assets/homeHero.jpg"); 
 }
 .aboutHero{
-    @apply h-[100vh] pt-20  bg-cover bg-center bg-no-repeat bg-fixed;
+    @apply h-[100vh] sm:h-[60vh] pt-20  bg-cover bg-center bg-no-repeat bg-fixed;
   background-image:
     linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 1)),
     url("/assets/imgi_55_about-bg.755e6d02.jpg"); 
